# Mastering-Algorithms-In-C

./: .travis.yml  README.md
5-linked-list/Singly/: CMakeLists.txt
5-linked-list/Singly/include/: linkedList.h
5-linked-list/Singly/src/: linkedList.c  linkedList.h  main.c
